--- a/Thesis/content/3_prelimitaries.tex
+++ b/Thesis/content/3_prelimitaries.tex
@@ -155,8 +155,8 @@ We utilize Apache Kafka as the streaming platform. Kafka is a widely used Publis
 \begin{figure}[h]
 \centering
 \includegraphics[width=5cm, height=5cm]{kafkadiagram}
-\caption[Kafka diagram]{Kafka diagram}
+\caption[Kafka diagram]{Kafka diagram\footnotemark}
 \label{fig:kafka}
 \end{figure}
 
-
+\footnotetext{From: https://kafka.apache.org/}
