--- a/src/GridSearch/GridSearch Datasets.ipynb
+++ b/src/GridSearch/GridSearch Datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -23,20 +23,20 @@
    "source": [
     "f_http = \"C:/Users/Bin/Desktop/Thesis/dataset/http.csv\"\n",
     "f_smtp = \"C:/Users/Bin/Desktop/Thesis/dataset/smtp.csv\"\n",
-    "f_forest = \"C:/Users/Bin/Desktop/Thesis/dataset/forest.csv\""
+    "f_forest = \"C:/Users/Bin/Desktop/Thesis/dataset/forest.csv\"\n",
+    "f_power = \"C:/Users/Bin/Desktop/Thesis/dataset/power.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "http = pd.read_csv(f_http,header=None)\n",
     "smtp = pd.read_csv(f_smtp,header=None)\n",
-    "forest = pd.read_csv(f_forest,header=None)"
+    "forest = pd.read_csv(f_forest,header=None)\n",
+    "power = pd.read_csv(f_power,header=None)"
    ]
   },
   {
@@ -72,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_train.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/http_gridsearch_train.csv\",header=None,index=None)\n",
@@ -161,6 +163,49 @@
     "n_train.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest_gridsearch_train.csv\",header=None,index=None)\n",
     "n_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest_gridsearch_test_n.csv\",header=None,index=None)\n",
     "a_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest_gridsearch_test_a.csv\",header=None,index=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(950, 2) (100, 2) (100, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#power\n",
+    "a_test = power[950:1050]\n",
+    "n_test = power[1050:1150]\n",
+    "n_train = power[:950]\n",
+    "print(n_train.shape, n_test.shape, a_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_train.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_gridsearch_train.csv\",header=None,index=None)\n",
+    "n_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_gridsearch_test_n.csv\",header=None,index=None)\n",
+    "a_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_gridsearch_test_a.csv\",header=None,index=None)"
    ]
   },
   {
