--- a/Thesis/content/5_experimentalsetup.tex
+++ b/Thesis/content/5_experimentalsetup.tex
@@ -18,14 +18,20 @@ PowerDemand & 35 040 & 1 &  21.92\\
 SMTP & 96 554 & 41 & 12.25  \\ 
 HTTP & 623 091 & 41  & 6.49  \\ 
 SMTP+HTTP & 719 645 & 41 & 7.26 \\ 
-ForestCover & 581 012 & 32 & 3.53 \\ [1ex]  
+ForestCover & 581 012 & 7 & 3.53 \\ [1ex]  
 \hline    
 \end{tabular}
 \label{tab:dataset}  
 \end{table} 
 
-\section{Data stream configuration}
-\label{sec:datastream}
+We separate each dataset into initialization set and streaming set, both contain normal and abnormal data. Further, the initialization set is divided into 
+\begin{itemize}
+\item G(n\&a): for grid search
+\item Tr(n): for model initial training
+\item P(n\&a): for model parameter learning
+\item Te(n\&a): for initial testing
+\end{itemize}
+where “n” represents normal data and “a” represents abnormal data. And the streaming set is published to Kafka to generate data stream (\Fref{fig:kafka}).
 
 \begin{figure}[h]
 \centering
@@ -34,14 +40,69 @@ ForestCover & 581 012 & 32 & 3.53 \\ [1ex]
 \label{fig:kafka}
 \end{figure}
 
+\section{Data stream configuration}
+\label{sec:datastream}
+
+
+
 \section{Parameter tuning}
 \label{sec:parametertuning}
 
-Grid search over: \\
-batch size
-window length
-hidden layer size
-epoches
+For each dataset, we carry out a grid search step to tuning the model hyperparameters that fit the data best. Here we try multiple combinations of window length and hidden size for each data set. The grid search set G contains 5\% -15\% anomalies, and same amount of normal data together with the anomalies make up the testing set in grid search. The rest normal data is used for training. Because of the uncertainty of the random neural network weight initialization, we do each experiment 10 times and take the average result to reduce the impact. To be noted that during every divisions, the consistency of streaming data is persisted, or in other words, no random sampling took place. A good model should make the reconstruction error as large as possible in order to make the classification easier. Given dataset D,  win is the input window, the average reconstruction error of D is given by \Fref{eq:are}. The target function of grid search is given by the ration of average reconstruction error of abnormal and normal test grid search set G (\Fref{eq:are}).
+
+\begin{equation}\label{eq:are}
+ARE(D) = \frac{1}{T}\sum_{t=1,win\in D}^{T}(input_{t,win}-output_{t,win})
+\end{equation}
+
+\begin{equation}\label{eq:ratio}
+REratio=\frac{ARE(G_a)}{ARE(G_n)}
+\end{equation}
+
+\begin{figure}[h]
+\centering
+	\begin {subfigure}[t]{0.45\textwidth}
+	\centering
+	\includegraphics[height=6cm]{http_gridsearch}
+	\caption{HTTP}
+	\label{fig:http}
+	\end{subfigure}
+	~
+	\begin {subfigure}[t]{0.45\textwidth}
+	\centering
+	\includegraphics[ height=6cm]{smtp_gridsearch}
+	\caption{SMTP}
+	\label{fig:smtp}
+	\end{subfigure}
+	~
+	\begin {subfigure}[t]{0.45\textwidth}
+	\centering
+	\includegraphics[height=6cm]{forest_gridsearch}
+	\caption{Forest}
+	\label{fig:forest}
+	\end{subfigure}
+
+	\caption[Grid search]{Grid search}
+\label{fig:gridsearch}
+\end{figure}
+
+As a result of grid search, the hyperparameter for different datasets is listed in 
+
+\begin{table}[h] 
+\caption{Hyperparameters} 
+\centering      
+\begin{tabular}{c c c c}  
+\hline\hline        
+Dataset & Window length & Hidden size & \#Streaming instance \\ [0.5ex] 
+\hline 
+PowerDemand & 35 040 & 1 &  21.92\\  
+SMTP & 96 554 & 41 & 12.25  \\ 
+HTTP & 623 091 & 41  & 6.49  \\ 
+SMTP+HTTP & 719 645 & 41 & 7.26 \\ 
+ForestCover & 581 012 & 7 & 3.53 \\ [1ex]  
+\hline    
+\end{tabular}
+\label{tab:hyper}  
+\end{table} 
 
 
 \section{Baseline model}
